--- a/includes/styles/customStyle.css
+++ b/includes/styles/customStyle.css
@@ -5,6 +5,11 @@
     src: url(../../fonts/poppins.ttf);
 }
 
+@font-face {
+    font-family: Roboto;
+    src: url(../../fonts/roboto.ttf);
+}
+
 /* font family for bold text */
 @font-face {
     font-family: Poppins;
@@ -17,10 +22,154 @@
     --brand-color-orange:rgb(243, 79, 14);
     --brand-color-orange-light:rgb(248, 145, 110);
     --brand-color-white:rgb(252, 247, 247);
+    --brand-color-black:rgb(0, 0, 0);
+    --bg-color: rgb(255, 250, 250);
+    --trans: 300ms ease-in-out;
 }
 
 *{
-    font-family:poppins;
+    /* font-family: roboto, sans-serif; */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    line-height: 1.5;
+}
+
+body {
+    color: #000000;
+    background: var(--bg-color);
+    font-size: 16px;
+    font-family: poppins, sans-serif;
+}
+
+main {
+    width: 100%;
+    height: 100vh;
+    background: white;
+}
+
+.navbar {
+    /* background: var(--brand-color-orange);
+    color: var(--brand-color-white); */
+    height: 60px;
+}
+
+.navbar .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.navbar .logo {
+    font-size: x-large;
+    font-weight: bold;
+    transition: var(--trans);
+    cursor: pointer;
+    color: var(--brand-color-orange);
+}
+
+.navbar .logo:hover {
+    transform: rotateX(360deg);
+}
+
+.navbar a {
+    font-weight: bold;
+    font-size: 16px;
+    transition: var(--trans);
+}
+
+.navbar a:hover {
+    color: var(--brand-color-orange);
+    font-size: 17px;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar ul li {
+    margin-left: 20px;
+    transition: var(--trans);
+    border-bottom: 2px solid var(--brand-color-white);
+}
+
+.navbar ul li:hover {
+    border-bottom: 2px solid var(--brand-color-orange);
+}
+
+.btn-container .btn:nth-child(2) {
+    margin-left: 10px;
+}
+
+.homepage {
+    position: relative;
+}
+
+.homepage .absolute-img img{
+    position: absolute;
+    z-index: -1;
+}
+
+.homepage .absolute-img img:nth-child(1) {
+    top: 50%;
+    left: 90px;
+}
+
+.homepage .absolute-img img:nth-child(2) {
+    top: 60%;
+    right: 180px;
+}
+
+.homepage .absolute-img img:nth-child(3) {
+    top: 5%;
+    left: 150px;
+}
+
+.homepage .absolute-img img:nth-child(4) {
+    top: 10%;
+    right: 80px;
+}
+
+.homepage .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+    text-align: center;
+}
+
+.homepage .container .intro {
+    max-width: 650px;
+}
+
+.homepage .container .intro h1 {
+    font-size: 40px;
+    font-weight: bold;
+    /* font-family: roboto; */
+}
+
+.homepage .container .intro h1 span {
+    color: var(--brand-color-orange);
+}
+
+.homepage .container div.intro p {
+    font-size: 13px;
+}
+
+.homepage .container div.intro .btn-container {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.homepage .container div.intro .btn-container .btn:nth-child(2) {
+    background: var(--brand-color-black);
+}
+
+.homepage .container div.intro .btn-container .btn:nth-child(2):hover {
+    background: var(--brand-color-orange);
 }
 
 
@@ -77,6 +226,45 @@
     color:var(--brand-color-white);
 }
 
+.btn {
+    padding: 10px 40px;
+    list-style: none;
+    cursor: pointer;
+    border-radius: 40px;
+    font-size: 15px;
+    font-weight: 600;
+    background: var(--brand-color-orange);
+    color: var(--brand-color-white);
+    transition: var(--trans);
+}
+
+.btn:hover {
+    background: var(--brand-color-black);
+}
+
+img {
+    max-width: 100%;
+}
+
+h1, h2 {
+    margin-bottom: 15px;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+li {
+    list-style: none;
+}
+
 /* Editable */
 .waviy {
     position: relative;
@@ -89,7 +277,8 @@
     font-size: 40px;
     /* text-transform: uppercase; */
     animation: waviy 1s infinite;
-    animation-delay: calc(.1s * var(--i)); 
+    animation-delay: calc(.1s * var(--i));
+    font-weight: bold;
 }
   
   @keyframes waviy {
@@ -140,3 +329,69 @@
       text-decoration: none;
       font-size: 20px;
   }
+
+  /* Preset Animations for motion in the page */
+
+  /* This module allows you to integrate animations by just adding an helper class to the html element */
+  /* The required classes are listed below */
+  /* .drop-anim, .smooth-zigzag-anim-1, .smooth-zigzag-anim-2, .smooth-zigzag-anim-3 .pulse-anim */
+
+  .drop-anim {
+     animation: drop 8.5s infinite;
+  }
+
+@keyframes drop {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% { transform: translateY(0); }
+  40%  { transform: translateY(-30px); }
+  60%  { transform: translateY(-15px); }
+}
+
+.smooth-zigzag-anim-1 {
+    animation: smooth-zigzag-1 5s linear infinite;
+}
+
+@keyframes smooth-zigzag-1 {
+  0%,
+  100% { transform: translate(0); }
+  25%  { transform: translate(10px, 10px); }
+  50%  { transform: translate( 5px,  5px); }
+  75%  { transform: translate(10px, -5px); }
+}
+
+.smooth-zigzag-anim-2 {
+    animation: smooth-zigzag-2 5s linear infinite;
+}
+
+@keyframes smooth-zigzag-2 {
+  0%,
+  100% { transform: translate(0); }
+  25%  { transform: translate(-10px, -10px); }
+  50%  { transform: translate( -5px,  -5px); }
+  75%  { transform: translate(-10px,   5px); }
+}
+
+.smooth-zigzag-anim-3 {
+    animation: smooth-zigzag-3 5s linear infinite;
+}
+
+@keyframes smooth-zigzag-3 {
+  0%,
+  100% { transform: translate(0); }
+  25%  { transform: translate( -7px,  -7px); }
+  50%  { transform: translate(-14px, -14px); }
+  75%  { transform: translate( -7px,  -7px); }
+}
+
+.pulse-anim {
+    animation: pulse 3s linear infinite;
+}
+
+@keyframes pulse {
+  0%,
+  70%  { box-shadow: 0 0 0 0 hsla(0, 0%, 100%, 1); }
+  100% { box-shadow: 0 0 0 15px transparent; }
+}
