--- a/loader.css
+++ b/loader.css
@@ -1,15 +1,25 @@
+* {
+   margin: 0;
+   padding: 0; 
+}
+
+body {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 /* Editable */
 .waviy {
     position: relative;
-    -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.2)); }
+    -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.2)); 
+}
   
-  .waviy span {
+.waviy span {
     position: relative;
     display: inline-block;
     font-size: 40px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     animation: waviy 1s infinite;
-    animation-delay: calc(.1s * var(--i)); }
+    animation-delay: calc(.1s * var(--i)); 
+}
   
   @keyframes waviy {
     0%, 40%, 100% {
